--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -1,8 +1,14 @@
 img{
     max-height: 120px;
     align-items: center;
+    justify-content: center;
 }
 
+
 .tarjeta{
-    padding: 4px;
-}
+    padding: 2px;
+    width: 140px;
+    display: grid;
+    place-items: center;
+    }
+
